Added documentation and refactored CaptureLocations